# RStats-Agent-RAG

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
app/: __init__.py  api_fastapi.py  demo_cases.py  ui_streamlit.py
data/: __init__.py  build_corpus.py  build_license_ledger.py  build_vector_index.py  crawl_cran_packages.py
data/raw/fixtures/: cran_dplyr.html  cran_ggplot2.html  cran_lme4.html  cran_renv.html
docs/: demo_script.md  retrieval_evaluation.md
evaluation/baselines/: v0.6_core_functions.json
evaluation/suites/: core_functions.jsonl  cran_metadata.jsonl
examples/: demo_dplyr.py  demo_ggplot2.py  demo_lme4.py
rstats_agent/: __init__.py  cli.py  config.py  schemas.py
rstats_agent/agents/: __init__.py  fusion.py  generator.py  prompts.py  r_agent.py  repair_loop.py
rstats_agent/embeddings/: __init__.py  base.py  local_hash.py  sentence_transformer.py
rstats_agent/evaluation/: __init__.py  dataset.py  evaluator.py  metrics.py  regression.py  reporting.py  schemas.py
rstats_agent/execution/: __init__.py  diagnostics.py  r_executor.py  repair.py  safety.py
rstats_agent/knowledge/: __init__.py  corpus_loader.py  hybrid_retriever.py  query_rewriter.py  retriever.py  vector_index.py
rstats_agent/knowledge/fixtures/: r_core_corpus.jsonl
rstats_agent/reporting/: markdown.py
scripts/: evaluate_retrieval.py
tests/: test_agent_pipeline.py  test_build_corpus.py  test_build_vector_index.py  test_cli.py  test_corpus_loader.py  test_cran_parser.py  test_demo_cases.py  test_embedding_backends.py  test_evaluate_retrieval_cli.py  test_evaluation_dataset.py  test_evaluation_reporting.py  test_execution_diagnostics.py  test_fastapi_app.py  test_generator.py  test_hybrid_retriever.py  test_license_ledger.py  test_markdown_report.py  test_query_rewriter.py  test_r_executor.py  test_repair_loop.py  test_repair_rules.py  test_retrieval_evaluator.py  test_retrieval_metrics.py  test_retrieval_regression.py  test_retriever.py  test_safety.py  test_streamlit_helpers.py  test_vector_index.py
