[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "RStats-Agent-RAG"
version = "0.1.0"
description = "Local MVP for an R statistics Agent and RAG pipeline."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "RStats-Agent-RAG contributors" }]
dependencies = [
  "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
rstats-agent = "rstats_agent.cli:main"

[tool.setuptools.packages.find]
include = ["rstats_agent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -p no:cacheprovider"
