[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "RStats-Agent-RAG"
version = "0.6.0"
description = "Local MVP for an R statistics Agent and RAG pipeline."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "RStats-Agent-RAG contributors" }]
dependencies = [
  "scikit-learn>=1.3",
  "requests>=2.31",
  "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
vector = [
  "faiss-cpu>=1.8",
  "sentence-transformers>=3.0",
]
web = [
  "streamlit>=1.36",
  "fastapi>=0.110",
  "uvicorn>=0.29",
]

[project.scripts]
rstats-agent = "rstats_agent.cli:main"

[tool.setuptools.packages.find]
include = ["rstats_agent*", "data*", "app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -p no:cacheprovider"
